--- a/app.json
+++ b/app.json
@@ -4,6 +4,22 @@
     "slug": "App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "plugins": ["expo-font"]
+    "plugins": [
+      "expo-font"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "17ce2888-b1e9-4860-af64-d6c091c5842b"
+      }
+    },
+    "android": {
+      "package": "com.Citeim.App",
+      "permissions": [
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "CAMERA",
+        "RECORD_AUDIO"
+      ]
+    }
   }
 }
